Cherry-pick bf6ad141e2f3. rdar://problem/98748112

REGRESSION (248115@main): `list-style` shorthand property doesn't work with `inside none` but with `none inside`
    https://bugs.webkit.org/show_bug.cgi?id=243991
    <rdar://98748112>

    Reviewed by Cameron McCormack.

    none can be either list-style-type or list-style-image, and longhands can be in any order. We need to distinguish them when parsing.

    Also, this fixes the bug where `none garbage` was valid, when it is actually invalid.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-type-computed-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-type-computed.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-type-valid-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-type-valid.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-valid-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-lists/parsing/list-style-valid.html:
    * Source/WebCore/css/parser/CSSPropertyParser.cpp:
    (WebCore::CSSPropertyParser::consumeListStyleShorthand):
    (WebCore::CSSPropertyParser::parseShorthand):
    * Source/WebCore/css/parser/CSSPropertyParser.h:

    Canonical link: https://commits.webkit.org/254282@main

Canonical link: https://commits.webkit.org/252432.372@safari-7614-branch